--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:rbobkoskie@gatech.edu">email</a></li>
+	        		<li><a href="mailto:rbobkoskie3@gatech.edu">email</a></li>
 	        		<li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
 				</ul>
 			</footer>
