--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/blog">blog</a></li>
+	        		<li><a href="/">Home</a></li>		        
 	        		<li><a href="/images">IMAGES</a></li>	        	
 	    		</ul>
 			</nav>
@@ -20,7 +19,12 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:rbobkoskie3@gatech.edu">email</a></li>
+	        		<li><a href="mailto:rbobkoskie3@gatech.edu">email</a></li>			
+				<p>If there are any additional feedback, enter in textbox and click "Send".</p>
+				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
+					<textarea name="body"></textarea>
+					<input type="submit" value="Send" />
+				</form>
 	        		<li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
 				</ul>
 			</footer>
