--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:rbobkoskie3@gatech.edu">email</a></li>			
+	        		<!-- <li><a href="mailto:rbobkoskie3@gatech.edu">email</a></li> -->			
 				<p>If there are any additional feedback, enter in textbox and click "Send".</p>
 				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
 					<textarea name="body"></textarea>
