--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
 			
 			{{ content }}
 			
+			<li><a href="/circle">CIRCLES</a></li>
+			
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
