--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,14 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>		        
-	        		<li><a href="/images">IMAGES</a></li>	        	
+	        		<li><a href="/about">About Project</a></li>	        	
 	    		</ul>
 			</nav>
 			<div class="container">
 			
 			{{ content }}
 			
-			<li><a href="/circle">CIRCLES</a></li>
+			<ul><li><a href="/circle">CIRCLES</a></li></ul>
 			
 			</div><!-- /.container -->
 			<footer>
