--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,11 @@
 			
 			{{ content }}
 			
-			<ul><li><a href="/circle">CIRCLES</a></li></ul>
+			<nav>
+			<ul>
+				<li><a href="/circle">CIRCLES</a></li>
+			</ul>
+			</nav> 	
 			
 			</div><!-- /.container -->
 			<footer>
