--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,63 @@
 			<ul>
 				<li><a href="/circle">CIRCLES</a></li>
 			</ul>
-			</nav> 	
+			</nav>
+
+			<style>
+			div { 
+                            text-align: justify; 
+                            text-justify: inter-word; 
+                            } 
+
+                        .btn-group button {
+                            background-color: #4CAF50; /* Green background */
+                            border: 1px solid green; /* Green border */
+                            color: white; /* White text */
+                            font-weight: bold;
+                            padding: 10px 24px; /* Some padding */
+                            cursor: pointer; /* Pointer/hand icon */
+                            float: left; /* Float the buttons side by side */
+                        }
+
+                        /* Clear floats (clearfix hack) */
+                        .btn-group:after {
+                            content: "";
+                            clear: both;
+                            display: table;
+                        }
+
+                        .btn-group button:not(:last-child) {
+                            border-right: none; /* Prevent double borders */}
+
+                        /* Add a background color on hover */
+                        .btn-group button:hover {
+                            background-color: #3e8e41;
+                        }
+                        </style>
+
+                        <div><p>
+                        Select High Contrast, or Standard contrast for page.
+                        </div></p>
+
+                        <div class="btn-group">
+                            <button type="button" onclick="setBG_Black()">HIGH CONTRAST</button>
+                            <button type="button" onclick="setBG_White()">STRD CONTRAST</button>
+                        </div>
+
+                        <script>
+                        function setBG_Black() {
+                            document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
+                            document.body.style.color = "yellow";
+                        }
+                        function setBG_White() {
+                            document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
+                            document.body.style.color = "black";
+                        }
+                        </script>
 			
 			</div><!-- /.container -->
+
+                        <br><br><br>
 			<footer>
 	    		<ul>
 	        		<!-- <li><a href="mailto:rbobkoskie3@gatech.edu">email</a></li> -->			
