--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    font: italic bold;
+    font-weight: bold;
+    font-style: italic;
 }
 a:hover {
     text-decoration: underline;
