--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 a {
-    text-decoration: none;
+    font-style: italic;
+    font-weight: bold;
 }
 a:hover {
     text-decoration: underline;
