--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,6 +78,8 @@
 			<nav>
 			<ul>
 				<li><a href="/circle">CIRCLES</a></li>
+				<li><a href="/parabola">PARABOLAS</a></li>
+				<li><a href="/hyperbola">HYPERBOLAS</a></li>
 			</ul>
 			</nav>
 			<br><br><br>
