--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,7 @@
                         <h1>Math Plots</h1>
 			<nav>
 			<ul>
+                                <li><a href="/line">LINES</a></li>
 				<li><a href="/circle">CIRCLES</a></li>
 				<li><a href="/parabola">PARABOLAS</a></li>
 				<li><a href="/hyperbola">HYPERBOLAS</a></li>
