--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,16 @@
                         .btn-group button:hover {
                             background-color: #3e8e41;
                         }
+
+                        .fit {  /* set relative picture size */
+                                max-width: 100%;
+                                max-height: 100%;
+                             }
+
+                        .center {
+                                 display: block;
+                                 margin: auto;
+                                }
                 </style>
                 
 		<body>
@@ -86,13 +96,11 @@
 			<br><br><br>
                         
 			<footer>
-	    		<ul>
-                                <p>Comments can be entered "Anonymously".</p>    
-                                <!-- begin wwww.htmlcommentbox.com -->
-                                  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
-                                  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
-                                  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24ndx59On.x2Zb5qyz%2FqFCZ1"+"&opts=16862&num=10&ts=1508847673018");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-                                <!-- end www.htmlcommentbox.com -->
+                            <ul>
+                                <p>Comments.</p>
+                                <a href="default.asp">
+                                </a>
+                                img class="center fit" src="https://rbobkoskie3.github.io/images/comments.png" title="Click on Image to Enter Comments" alt="HTML tutorial" style="border:0;>
                                 <br><br><br>
                                 
 	        		<!-- <li><a href="mailto:rbobkoskie3@gatech.edu">email</a></li> -->			
@@ -102,7 +110,7 @@
 					<input type="submit" value="Send" />
 				</form>
 	        		<li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
-				</ul>
+			    </ul>
 			</footer>
 		</body>
 	</html>
