--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,9 @@
                             <ul>
                                 <p>Comments.</p>
                                 <a href="default.asp">
-                                img class="center fit" src="https://rbobkoskie3.github.io/images/comments.png" title="Click on Image to Enter Comments" alt="HTML tutorial" style="border:0;>
+                                <img class="center fit" src="https://rbobkoskie3.github.io/images/comments.png"
+                                title="Click on Image to Enter Comments"
+                                alt="https://youtu.be/x54uVowlfMU" style="border:0;>
                                 </a>
                                 <br><br><br>
                                 
