--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
+                        img class="center fit" src="\images\gtech.png"
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -103,13 +104,13 @@
                                 title="Click on Image to Enter Comments"
                                 alt="https://youtu.be/x54uVowlfMU" style="border:0;>
                                 </a>
-                                <br><br><br><br><br><br><br><br><br>
+                                <br><br><br>
                                 
-				<p>If there are any additional feedback, enter in textbox and click "Send".</p>
+				<div><p>If there are any additional feedback, enter in textbox and click "Send".</p>
 				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
 					<textarea name="body"></textarea>
 					<input type="submit" value="Send" />
-				</form>
+				</form></div>
 	        		<li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
 			    </ul>
 			</footer>
