--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-                        img class="center fit" src="\images\gtech.png"
+                        <img class="center fit" src="\images\gtech.png">
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -106,11 +106,12 @@
                                 </a>
                                 <br><br><br>
                                 
-				<div><p>If there are any additional feedback, enter in textbox and click "Send".</p>
+				<p><br><br><br>If there are any additional feedback, enter in textbox and click "Send".</p>
+                                <br><br><br>
 				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
 					<textarea name="body"></textarea>
 					<input type="submit" value="Send" />
-				</form></div>
+				</form>
 	        		<li><a href="https://github.com/rbobkoskie3">github.com/rbobkoskie3</a></li>
 			    </ul>
 			</footer>
