--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,11 +102,11 @@
                                 <a href="https://youtu.be/x54uVowlfMU">
                                 <img class="center fit" src="https://rbobkoskie3.github.io/images/comments.png"
                                 title="Click on Image to Enter Comments"
-                                alt="https://youtu.be/x54uVowlfMU" style="border:0;>
+                                alt="https://youtu.be/x54uVowlfMU" style="border:0;">
                                 </a>
-                                
-				If there are any additional feedback, enter in textbox and click "Send".
                                 <br><br><br>
+                                
+				<p>If there are any additional feedback, enter in textbox and click "Send".</p>
 				<form action="mailto:rbobkoskie3@gatech.edu" method="GET">
 					<textarea name="body"></textarea>
 					<input type="submit" value="Send" />
