--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>		        
-	        		<li><a href="/about">About Project</a></li>	        	
+	        		<li><a href="/about">Project Propositum</a></li>	        	
 	    		</ul>
 			</nav>
 			
