--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
                         function setBG_Black() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                             document.body.style.color = "yellow";
+                            document.link.style.color = "yellow";
                         }
                         function setBG_White() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
