--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,21 @@
                         function setBG_Black() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                             document.body.style.color = "yellow";
-                            document.link.style.color = "yellow";
+                            a:link {
+                                background-color: yellow;
+}
+
+a:visited {
+    background-color: cyan;
+}
+
+a:hover {
+    background-color: lightgreen;
+}
+
+a:active {
+    background-color: hotpink;
+} 
                         }
                         function setBG_White() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
