--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,21 +70,20 @@
                         function setBG_Black() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                             document.body.style.color = "yellow";
+                            <style>
                             a:link {
                                 background-color: yellow;
-}
-
-a:visited {
-    background-color: cyan;
-}
-
-a:hover {
-    background-color: lightgreen;
-}
-
-a:active {
-    background-color: hotpink;
-} 
+                            }
+                            a:visited {
+                                background-color: cyan;
+                            }
+                            a:hover {
+                                background-color: lightgreen;
+                            }
+                            a:active {
+                                background-color: hotpink;
+                            }
+                            </style>
                         }
                         function setBG_White() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
