--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,20 +70,7 @@
                         function setBG_Black() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                             document.body.style.color = "yellow";
-                            <style>
-                            a:link {
-                                background-color: yellow;
-                            }
-                            a:visited {
-                                background-color: cyan;
-                            }
-                            a:hover {
-                                background-color: lightgreen;
-                            }
-                            a:active {
-                                background-color: hotpink;
-                            }
-                            </style>
+                            document.links.style.color = "yellow";
                         }
                         function setBG_White() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
