--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,8 +70,8 @@
                         function setBG_Black() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                             document.body.style.color = "yellow";
-                            //document.links.style.color = "#222";
-                            document.links.color = "yellow";
+                            document.links.style.color = "#222";
+                            //document.links.color = "yellow";
                         }
                         function setBG_White() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
