--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,8 +71,8 @@
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                             document.body.style.color = "yellow";
                             //document.links.style.color = "#222";
-                            //document.links.color = "#222";
-                            $('#a').css('color','#222');
+                            document.body.link.color = "yellow";
+                            //<body link="blue">
                         }
                         function setBG_White() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
