--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,10 @@
                             document.body.style.color = "yellow";
                             //document.links.style.color = "#222";
                             document.body.link.color = "yellow";
+                            document.body.link = "yellow";
+                            document.body.link.color = "#222";
+                            document.body.link = "#222";
+                            
                             //<body link="blue">
                         }
                         function setBG_White() {
