--- a/css/main.css
+++ b/css/main.css
@@ -14,12 +14,14 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #777;
+    // color: #777;
+    color: #000;
 }
 a:hover {
     text-decoration: underline;
 }
-a[target] {
+// a[target] {
+a[target=_HCS] {
     background-color: yellow;
 }
 h1 {
