--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,10 +88,14 @@
                         <h1>Math Plots</h1>
 			<nav>
 			<ul>
-                                <li><a href="/line">LINES</a></li>
-				<li><a href="/circle">CIRCLES</a></li>
-				<li><a href="/parabola">PARABOLAS</a></li>
-				<li><a href="/hyperbola">HYPERBOLAS</a></li>
+                                <li><a href="/line"
+                                    target="_HCS">LINES</a>
+				<li><a href="/circle"
+                                    target="_HCS">CIRCLES</a>
+				<li><a href="/parabola"
+                                    target="_HCS">PARABOLAS</a>
+				<li><a href="/hyperbola"
+                                    target="_HCS">HYPERBOLAS</a>
 			</ul>
 			</nav>
 			<br><br><br>
