--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,8 +52,8 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">Home</a></li>		        
-	        		<li><a href="/about">Project Propositum</a></li>	        	
+	        		<li><a href="/" target="_HCS">Home</a></li>	        
+	        		<li><a href="/about" target="_HCS">Project Propositum</a></li>	        	
 	    		</ul>
 			</nav>
 			
@@ -88,14 +88,10 @@
                         <h1>Math Plots</h1>
 			<nav>
 			<ul>
-                                <li><a href="/line"
-                                    target="_HCS">LINES</a>
-				<li><a href="/circle"
-                                    target="_HCS">CIRCLES</a>
-				<li><a href="/parabola"
-                                    target="_HCS">PARABOLAS</a>
-				<li><a href="/hyperbola"
-                                    target="_HCS">HYPERBOLAS</a>
+                                <li><a href="/line" target="_HCS">LINES</a></li>
+				<li><a href="/circle" target="_HCS">CIRCLES</a></li>
+				<li><a href="/parabola" target="_HCS">PARABOLAS</a></li>
+				<li><a href="/hyperbola" target="_HCS">HYPERBOLAS</a></li>
 			</ul>
 			</nav>
 			<br><br><br>
