--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,12 +71,12 @@
                         function setBG_Black() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                             document.body.style.color = "yellow";
-                            image.src = "\images\gtech.png";
+                            image.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
                         }
                         function setBG_White() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                             document.body.style.color = "black";
-                            image.src = "\images\gtech.png";
+                            image.src = "https://rbobkoskie3.github.io/images/gtech.png";
                         }
                         </script>
 
