--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
                             border: 1px solid green; /* Green border */
                             color: white; /* White text */
                             font-weight: bold;
+			    font-size: 18px;
                             padding: 10px 24px; /* Some padding */
                             cursor: pointer; /* Pointer/hand icon */
                             float: left; /* Float the buttons side by side */
