--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,7 @@
 
                         <div class="btn-group">
                             <button type="button" onclick="setBG_Black()">HIGH CONTRAST</button>
-                            <button type="button" onclick="setBG_White()">STRD CONTRAST</button>
+                            <button type="button" onclick="setBG_White()">STD  CONTRAST</button>
                         </div>
 
                         <script>
