--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,16 +68,19 @@
                         </div>
 
                         <script>
-                        var image =  document.getElementById("gtech");
+                        var gtech =  document.getElementById("gtech");
+                        var line_neg =  document.getElementById("line_neg");
                         function setBG_Black() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                             document.body.style.color = "yellow";
-                            image.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
+                            gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
+                            line_neg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
                         }
                         function setBG_White() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                             document.body.style.color = "black";
-                            image.src = "https://rbobkoskie3.github.io/images/gtech.png";
+                            gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
+                            line_neg.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
                         }
                         </script>
 
