--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                             document.body.style.color = "black";
                             gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
-                            line_neg.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
+                            line_neg.src = "https://rbobkoskie3.github.io/images/gtech.png";
                         }
                         </script>
 
