--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-                        <img id ="g_tech" class="center fit" src="\images\gtech.png">
+                        <img id ="gtech" class="center fit" src="\images\gtech.png">
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -68,19 +68,19 @@
                         </div>
 
                         <script>
-                        var g_tech =  document.getElementById("gtech");
-                        var line_neg =  document.getElementById("line_neg");
+                        var gtech =  document.getElementById("gtech");
+                        var lineNeg =  document.getElementById("lineNeg");
                         function setBG_Black() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
                             document.body.style.color = "yellow";
-                            g_tech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
-                            line_neg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
+                            gtech.src = "https://rbobkoskie3.github.io/images/gtech_HCS.png";
+                            lineNeg.src = "https://rbobkoskie3.github.io/images/HC_Neg_Line.png";
                         }
                         function setBG_White() {
                             document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
                             document.body.style.color = "black";
-                            g_tech.src = "https://rbobkoskie3.github.io/images/gtech.png";
-                            line_neg.src = "https://rbobkoskie3.github.io/images/gtech.png";
+                            gtech.src = "https://rbobkoskie3.github.io/images/gtech.png";
+                            lineNeg.src = "https://rbobkoskie3.github.io/images/ST_Neg_Line.png";
                         }
                         </script>
 
