--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-                <img id ="gtech" class="center fit" src="\images\gtech.png">
+                <img id ="gtech" class="center fit" style="width:500px;height:101px" src="\images\gtech.png">
 		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
@@ -52,8 +52,8 @@
 
         <body>
 		<nav><ul>
-	            <li><a href="/" target="_HCS">Home</a></li>	        
-	            <li><a href="/about" target="_HCS">Project Propositum</a></li>	        	
+	            <li><a href="/" target="_blank">Home</a></li>	        
+	            <li><a href="/about" target="_blank">Project Propositum</a></li>	        	
 	    	</ul></nav>
 	
                 <div><p>
@@ -88,10 +88,10 @@
 
                 <h1>Math Plots</h1>
 		<nav><ul>
-                    <li><a href="/line" target="_HCS">LINES</a></li>
-        	    <li><a href="/circle" target="_HCS">CIRCLES</a></li>
-        	    <li><a href="/parabola" target="_HCS">PARABOLAS</a></li>
-		    <li><a href="/hyperbola" target="_HCS">HYPERBOLAS</a></li>
+                    <li><a href="/line" target="_blank">LINES</a></li>
+        	    <li><a href="/circle" target="_blank">CIRCLES</a></li>
+        	    <li><a href="/parabola" target="_blank">PARABOLAS</a></li>
+		    <li><a href="/hyperbola" target="_blank">HYPERBOLAS</a></li>
 		</ul></nav>
 		<br><br><br>
 
