--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
 	    	</ul></nav>
 	
                 <div><p>
-                    Select High Contrast, or Standard contrast for the webpage.
+                    Select High Contrast, or Standard (Std) Contrast for the webpage.
                 </div></p>
 
                 <div class="btn-group">
