--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,7 +98,7 @@
                 <footer>
                     <ul>
                         <p>Comments.</p>
-                        <a href="https://youtu.be/x54uVowlfMU">
+                        <a href="https://youtu.be/x54uVowlfMU" target="_blank">
                             <img class="center fit" src="https://rbobkoskie3.github.io/images/comments.png"
                             title="Click on Image to Enter Comments"
                             alt="https://youtu.be/x54uVowlfMU" style="border:0;">
